# dual_arm_robot_project_ROS

./: LICENSE  README.md
dual_RS006L/: CMakeLists.txt  package.xml
dual_RS006L/config/: joint_names_dual_RS006L.yaml
dual_RS006L/launch/: adual_rs006l.rviz  display.launch  gazebo.launch
dual_RS006L/meshes/: left_ax1_link.STL  left_ax2_link.STL  left_ax3_link.STL  left_ax4_link.STL  left_ax5_link.STL  left_ax6_link.STL  left_base_link.STL  right_ax1_Link.STL  right_ax2_Link.STL  right_ax3_Link.STL  right_ax4_Link.STL  right_ax5_Link.STL  right_ax6_Link.STL  right_base_link.STL  world.STL
dual_RS006L/urdf/: dual_RS006L.csv  dual_RS006L.urdf
dual_arm_base_control/: CMakeLists.txt  package.xml
dual_arm_base_control/scripts/: MotionGroup.py  PCA9685.py  ServoPose.py  dfr_demo.py  gripper_controller.py  path_data_dual_arm_1_1.txt  path_data_dual_arm_1_2.txt  path_data_dual_arm_1_3.txt  path_data_dual_arm_2_1.txt  path_data_dual_arm_3_1.txt  path_data_dual_arm_4_1.txt  robot_arm.py  robot_arm_controller.py  testdj1.py  uservo.py  wrist_gripper.py
dual_arm_init/: CMakeLists.txt  package.xml
dual_arm_init/launch/: dual_arm_control_launch.launch
dual_arm_init/scripts/: init_client.py  init_server.py
dual_arm_init/srv/: poseInit.srv
joint_state_exchange/: CMakeLists.txt  package.xml
joint_state_exchange/include/joint_state_exchange/: StateSubAndPub.h
joint_state_exchange/msg/: RobotState.msg
joint_state_exchange/src/: joint_state_exchange.cpp
kawasaki_driver/: CMakeLists.txt  package.xml
