<?xml version="1.0"?>
<package format="2">
  <name>kawasaki_driver</name>
  <version>0.0.0</version>
  <description> Driver for Kawasaki robots. </description>

  <maintainer email="haowanghk@gmail.com">WANGHAO</maintainer>
  <author>WANGHAO</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>
